--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "bundle/fugitive"]
 	path = bundle/fugitive
 	url = https://github.com/tpope/vim-fugitive.git
+[submodule "bundle/powerline1"]
+	path = bundle/powerline1
+	url = https://github.com/Lokaltog/vim-powerline.git
